@@ -5,17 +5,24 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 class STable {
 
-    private LinkedList<HashMap<String, Object>> tree = new LinkedList<>();
+    private ArrayList<HashMap<String, Object>> tree = new ArrayList<>();
 
     final static String selectOp = "\\.";
     ArrayList<String> IDStack = new ArrayList<>();
+    ArrayList<String> nameStack = new ArrayList<>();
     FJCallStack callStack = new FJCallStack();
-
+    FJSDStack SDstack = new FJSDStack();
+    
+    
     private int level = 0;
     private static AtomicInteger anonCount = new AtomicInteger(-1);
 
     static String newAnonID() {
         return "$" + anonCount.incrementAndGet();
+    }
+
+    public FJSDStack SDStack() {
+        return SDstack;
     }
 
     private HashMap<String, Object> currentTable() {
@@ -38,9 +45,19 @@ class STable {
     }
 
     public HashMap<String, Object> oldScope() {
-        tree.removeLast();
+        tree.remove(tree.size() - 1);
         level -= 1;
         return currentTable();
+    }
+
+    public void startStructDef(String typeName) {
+        FJStructDef add = new FJStructDef(typeName);
+        put(typeName, add);
+        SDstack.declare(add);
+    }
+
+    public void endStructDef() {
+        SDstack.finish();
     }
 
     /**
@@ -53,105 +70,125 @@ class STable {
      * @return the symbol table of an ID and the index of the symbol table in a [
      *         table, index ] array
      */
-    public Object[] tableAndLevel(String FirstID) {
+    public HashMap<String, Object> findTable(String FirstID) {
         boolean found = false;
         int curLevel = level;
-        HashMap<String, Object> lastTable = tree.getLast();
+        HashMap<String, Object> lastTable = tree.get(tree.size() - 1);
         HashMap<String, Object> symbols = lastTable;
         for (; found != true && curLevel != -1; curLevel -= 1) {
             symbols = getTable(curLevel);
             found = symbols.containsKey(FirstID);
         }
-        if (found == true) {
-            curLevel++;
-        } else {
-            symbols = lastTable;
-        }
-        return new Object[] { symbols, curLevel };
+        return found ? symbols : null;
     }
 
-    /***
-     * Returns the fully selected object.
-     * E.g. (if the selection operator is '.') a.b.c returns c, or if
-     * {@code penultimate} is true,
-     * returns b. (The last object with a member selection operator after it.)
-     * Only works when the first object is a struct.
-     * 
-     * @param splits the ID split up by member selection operator
-     * @param table  the resolved variable symbol table
-     * @return
-     */
     @SuppressWarnings("unchecked")
-    private Object fullSelect(String[] splits, HashMap<String, Object> table, boolean penultimate) {
+    private void fullPut(
+        String[] splits, Object o, HashMap<String, Object> table) {
+            Object holder;
+            if (splits.length == 1) {
+                holder = table;
+            } else {
+                holder = resolve(splits, table);
+            }
+            try {
+                ((HashMap<String, Object>) holder).put(splits[splits.length - 1], o);
+            } catch (Exception isAStructDef) {
+                ((FJStructDef) holder).addMember(splits[splits.length - 1], o);
+            }
+        
+    }
+
+    @SuppressWarnings("unchecked")
+    public Object fullGet(
+        String[] splits, HashMap<String, Object> table) {
+            Object holder;
+            if (splits.length == 1) {
+                holder = table;
+                
+            } else {
+                holder = resolve(splits, table);
+            }
+            try {
+                return ((HashMap<String, Object>) holder).get(splits[splits.length - 1]);
+            } catch (Exception isAStructDef) {
+                return ((FJStructDef) holder).getMember(splits[splits.length - 1]);
+            }
+            
+        
+    }
+
+    @SuppressWarnings("unchecked")
+    private Object resolve(String[] splits, HashMap<String, Object> table) {
         HashMap<String, Object> subTable = table;
-        ArrayList<Object> list = null;
-        boolean lastList = false;
+        FJStructDef sdef = null;
+        boolean lastDef = false;
         int i;
         for (i = 0; i < splits.length - 1; i++) {
             try {
                 subTable = (HashMap<String, Object>) subTable.get(splits[i]);
-                lastList = false;
+                lastDef = false;
             } catch (Exception FJ_Excpetion) {
-                list = (ArrayList<Object>) subTable.get(splits[i]);
-                lastList = true;
+                sdef = ((FJStructDef) subTable.get(splits[i]));
+                subTable = sdef.members;
+                lastDef = true;
             }
         }
-        if (lastList) {
-            return list; // TODO: Handle lists properly
+        if (lastDef) {
+            return sdef;
         } else {
-            return (penultimate) ? subTable : subTable.get(splits[i]);
+            return subTable;
         }
+
     }
 
     @SuppressWarnings("unchecked")
     public Object get(String ID) {
         String[] splits = ID.split(selectOp);
-        Object[] tableAndLevel = tableAndLevel(splits[0]);
-        HashMap<String, Object> table = (HashMap<String, Object>) tableAndLevel[0];
+        splits = SDstack.qualify(splits);
+        HashMap<String, Object> table = findTable(splits[0]);
         if (callStack.containsID(ID)) {
             table = callStack.currentTable();
-        } else if (((int) tableAndLevel[1]) < 0) {
+        }
+        if (table == null) {
             System.err.println("Cannot find the symbol " + ID);
             return null;
         }
-        if (splits.length == 1) {
-            return table.get(ID);
-        } else {
-            return fullSelect(splits, table, false);
-        }
+        return fullGet(splits, table);
     }
 
-    @SuppressWarnings("unchecked")
-    public void put(String ID, Object value) {
+    public void put(String ID, Object o) {
         String[] splits = ID.split(selectOp);
-        Object[] tableAndLevel = tableAndLevel(splits[0]);
-        HashMap<String, Object> table = (HashMap<String, Object>) tableAndLevel[0];
+        splits = SDstack.qualify(splits);
+        HashMap<String, Object> table = findTable(splits[0]);
         if (callStack.containsID(ID)) {
             table = callStack.topTable();
         }
-        if (splits.length == 1) {
-            table.put(ID, value);
-        } else {
-            HashMap<String, Object> subTable 
-                = (HashMap<String, Object>) fullSelect(splits, table, true);
-            subTable.put(splits[splits.length - 1], value);
-        }
+        if (table == null) { table = currentTable(); }
+        fullPut(splits, o, table);
+    }
 
+    public boolean containsGlobal(String ID) {
+        return getTable(0).containsKey(ID);
+    }
+
+    public HashMap<String, Object> globalTable() {
+        return getTable(0);
     }
 
     // search and destroy. will look on all levels for the variable
     @SuppressWarnings("unchecked")
     public Object remove(String ID) {
         String[] splits = ID.split(selectOp);
-        Object[] tableAndLevel = tableAndLevel(splits[0]);
-        HashMap<String, Object> table = (HashMap<String, Object>) tableAndLevel[0];
+        HashMap<String, Object> table = findTable(ID);
         if (splits.length == 1) {
             return table.remove(ID);
-        } else {
+        } else if (table != null) {
             HashMap<String, Object> subTable 
-                = (HashMap<String, Object>) fullSelect(splits, table, true);
+                = (HashMap<String, Object>) resolve(splits, table);
             return subTable.remove(splits[splits.length - 1]);
         }
+        return null;
     }
 
 }
